--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,48 @@
   text-align: center;
   font-family: 'Montserrat', sans-serif;
 }
+
+.Home,
+.Gallery, 
+.Example, 
+.Contact {
+  display: flex;
+  height: 110vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.Home{
+  background-image: url(./pictures/flower1.JPG);
+  opacity: 0.8;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+.Example{
+  background-image: url(./pictures/flower2.JPG);
+  opacity: 0.8;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+.Gallery{
+  background-image: url(./pictures/flower3.JPG);
+  opacity: 0.8;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: rgb(253, 255, 132);
+  font-size: 100px;
+}
+.Contact{
+  background-image: url(./pictures/flower4.JPG);
+  opacity: 0.7;
+  background-position: center;
+  background-repeat: no-repeat;
+  color:rgb(12, 12, 11);
+  font-size: 100px;
+}
